--- a/kra-coeus-irb-8-27/irb-notes.html
+++ b/kra-coeus-irb-8-27/irb-notes.html
@@ -21,7 +21,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 //-->
 </script>
 </head>
-<body>asdf a
+<body>
 <form name="example"  method="post" action="">
 <div class="headerarea-kra" id="headerarea">
   <h1>IRB - Notes &amp; Attachments<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
