--- a/kra-coeus-7-25/rights-pop.html
+++ b/kra-coeus-7-25/rights-pop.html
@@ -1,1 +1,153 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><title>Kuali</title><LINK REL="SHORTCUT ICON" HREF="../images/icon.ico"><meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1"><link href="../css/kuali.css" rel=stylesheet type="text/css"><script language=javascript src="../scripts/my_bm_inc.js"></script><script language=javascript1.2 src="../scripts/my_explorer.js"></script><script language=JavaScript1.2 src="../scripts/my_wap_bkmrk_fix.js"></script><script language=JavaScript src="../scripts/CalendarPopup.js"></script><script language=JavaScript type="text/JavaScript"><!--function MM_goToURL() { //v3.0  var i, args=MM_goToURL.arguments; document.MM_returnValue = false;  for (i=0; i<(args.length-1); i+=2) eval(args[i]+".location='"+args[i+1]+"'");}//--></script><style type="text/css"><!--#workarea .neutral {	background-color: #FFFFFF;	border: 1px none #FFFFFF;	width: 50%;}--></style></head><body onLoad="placeFocus();"><form name="example" id="kualiForm" method="post" action="/kuali-reg/kr/inquiry.do" enctype="" onSubmit="return hasFormAlreadyBeenSubmitted();">  <div class="headerarea-small" id="headerarea-small">          <h1>Rights</h1>  </div><table width="100%" cellpadding="0" cellspacing="0">    <tr>      <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>      <td><div id="workarea">              <p>          <!-- if the section has errors, override and set isOpen to true -->          <!-- TAB -->        </p>        <table class="tab" summary="" border="1" cellpadding="0" cellspacing="0" width="100%">          <tbody>            <tr>              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="asd" align="absmiddle" height="29" width="12"> <a name="0"></a>Rights</td>              <td class="tabtable1-mid">&nbsp;</td>              <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="ASD" align="middle" height="29" width="12"></td>            </tr>          </tbody>        </table>        <div style="display: block;" id="tab-0-div">          <!-- display errors for this tab -->          <!-- Before the jsp:doBody of the kul:tab tag -->          <div class="tab-container" align="center"><div class="h2-container"> <span class="subhead-left">              <h2>User Rights</h2>              </span></div>            <table cellpadding=0 cellspacing="0"  summary="">              <tr>                <th width="35%"><div align="right">John Klemmer: </div></th>                <td align=left valign=middle ><label>                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                  read</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      modify</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      none</label>                </td>              </tr>              <tr>                <th><div align="right">Dizzy Gillespie:</div></th>                <td align=left valign=middle ><label>                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                  read</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      modify</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      none</label>                </td>              </tr>              <tr>                <th><div align="right">Sam Rivers:</div></th>                <td align=left valign=middle ><label>                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                  read</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      modify</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      none</label>                </td>              </tr>              <tr>                <th><div align="right">Sarah Vaughn</div></th>                <td align=left valign=middle ><label>                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                  read</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      modify</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      none</label>                </td>              </tr>              <tr>                <th><div align="right">Bob Berg:</div></th>                <td align=left valign=middle >                    <label>                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      read</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      modify</label>                    <label> &nbsp;&nbsp;&nbsp;                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">                      none</label>               </td>              </tr>            </table>          </div>          <!-- After the jsp:doBody of the kul:tab tag -->        </div>        <!-- if the section has errors, override and set isOpen to true -->        <!-- TAB -->        <table class="b3" summary="" border="0" cellpadding="0" cellspacing="0" width="100%">          <tbody>            <tr>              <td class="footer" align="left"><img src="../images/pixel_clear.gif" alt="" class="bl3" height="14" width="12"></td>              <td class="footer-right" align="right"><img src="../images/pixel_clear.gif" alt="" class="br3" height="14" width="12"></td>            </tr>          </tbody>        </table>        </div></td>      <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>    </tr>  </table>  <table class="bord-r-t" border="0" cellpadding="0" cellspacing="0" width="100%">    <tbody>      <tr>        <th align="center">           <br><br><a href="javascript:window.close();">          <img src="../images/buttonsmall_save.gif" alt="close this window" align="absmiddle"></a>        </th>      </tr>    </tbody>  </table>  <!-- lookup/inquiry footer --></form></body></html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Kuali</title>
+<LINK REL="SHORTCUT ICON" HREF="../images/icon.ico">
+<meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1">
+<link href="../css/kuali.css" rel=stylesheet type="text/css">
+<script language=javascript src="../scripts/my_bm_inc.js"></script>
+<script language=javascript1.2 src="../scripts/my_explorer.js"></script>
+<script language=JavaScript1.2 src="../scripts/my_wap_bkmrk_fix.js"></script>
+<script language=JavaScript src="../scripts/CalendarPopup.js"></script>
+<script language=JavaScript type="text/JavaScript">
+<!--
+
+function MM_goToURL() { //v3.0
+  var i, args=MM_goToURL.arguments; document.MM_returnValue = false;
+  for (i=0; i<(args.length-1); i+=2) eval(args[i]+".location='"+args[i+1]+"'");
+}
+//-->
+</script>
+<style type="text/css">
+<!--
+#workarea .neutral {
+	background-color: #FFFFFF;
+	border: 1px none #FFFFFF;
+	width: 50%;
+}
+-->
+</style>
+</head>
+<body onLoad="placeFocus();">
+<form name="example" id="kualiForm" method="post" action="/kuali-reg/kr/inquiry.do" enctype="" onSubmit="return hasFormAlreadyBeenSubmitted();">
+  <div class="headerarea-small" id="headerarea-small">
+          <h1>Proposal - Rights</h1>
+  </div><table width="100%" cellpadding="0" cellspacing="0">
+    <tr>
+      <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
+      <td><div id="workarea">
+      
+        <p>
+          <!-- if the section has errors, override and set isOpen to true -->
+          <!-- TAB -->
+        </p>
+        <table class="tab" summary="" border="1" cellpadding="0" cellspacing="0" width="100%">
+          <tbody>
+            <tr>
+              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="asd" align="absmiddle" height="29" width="12"> <a name="0"></a>Rights</td>
+              <td class="tabtable1-mid">&nbsp;</td>
+              <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="ASD" align="middle" height="29" width="12"></td>
+            </tr>
+          </tbody>
+        </table>
+        <div style="display: block;" id="tab-0-div">
+          <!-- display errors for this tab -->
+          <!-- Before the jsp:doBody of the kul:tab tag -->
+          <div class="tab-container" align="center"><div class="h2-container"> <span class="subhead-left">
+              <h2>User Rights</h2>
+              </span></div>
+            <table cellpadding=0 cellspacing="0"  summary="">
+              <tr>
+                <th width="35%"><div align="right">John Klemmer: </div></th>
+                <td align=left valign=middle ><label>
+                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                  read</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      modify</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      none</label>
+                </td>
+              </tr>
+              <tr>
+                <th><div align="right">Dizzy Gillespie:</div></th>
+                <td align=left valign=middle ><label>
+                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                  read</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      modify</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      none</label>                </td>
+              </tr>
+              <tr>
+                <th><div align="right">Sam Rivers:</div></th>
+                <td align=left valign=middle ><label>
+                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                  read</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      modify</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      none</label>                </td>
+              </tr>
+              <tr>
+                <th><div align="right">Sarah Vaughn</div></th>
+                <td align=left valign=middle ><label>
+                  <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                  read</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      modify</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      none</label>                </td>
+              </tr>
+              <tr>
+                <th><div align="right">Bob Berg:</div></th>
+                <td align=left valign=middle >
+                    <label>
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      read</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      modify</label>
+                    <label> &nbsp;&nbsp;&nbsp;
+                    <input name="RadioGroup1" type="radio" class="nobord" id="RadioGroup1_0" value="radio">
+                      none</label>               </td>
+              </tr>
+            </table>
+          </div>
+          <!-- After the jsp:doBody of the kul:tab tag -->
+        </div>
+        <!-- if the section has errors, override and set isOpen to true -->
+        <!-- TAB -->
+        <table class="b3" summary="" border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tbody>
+            <tr>
+              <td class="footer" align="left"><img src="../images/pixel_clear.gif" alt="" class="bl3" height="14" width="12"></td>
+              <td class="footer-right" align="right"><img src="../images/pixel_clear.gif" alt="" class="br3" height="14" width="12"></td>
+            </tr>
+          </tbody>
+        </table>
+        </div></td>
+      <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
+    </tr>
+  </table>
+  <table class="bord-r-t" border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tbody>
+      <tr>
+        <th align="center"> 
+          <br><br>
+<a href="javascript:window.close();">
+          <img src="../images/buttonsmall_save.gif" alt="close this window" align="absmiddle"></a>        </th>
+      </tr>
+    </tbody>
+  </table>
+  <!-- lookup/inquiry footer -->
+</form>
+</body>
+</html>
