Changes to give different examples on the proposal pages
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@5909 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-7-25/prop-abstracts-attach.html
+++ b/kra-coeus-7-25/prop-abstracts-attach.html
@@ -417,7 +417,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G03" style="display: nonee;">
+          <div class="tab-container" align="center" id="G03" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Add Institutional Attachments</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </span> </div>
@@ -449,27 +449,27 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th width="2%"  scope="row">1</th>
                 <td> 05/25/2007 10:44:18 </td>
-                <td> HUNTLEY,KEISHA Y</td>
+                <td> Clark, Tom Robert </td>
                 <td>Institutional attachment 1</td>
-                <td>my description...</td>
+                <td>Web master </td>
                 <td>myDoc1.doc</td>
                 <td nowrap><div align=center> <a href="#"><img src="../images/tinybutton-view.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
                 <th width="2%"  scope="row">2</th>
                 <td> 05/26/2007 10:44:18 </td>
-                <td> HUNTLEY,KEISHA Y</td>
+                <td> John, Aloysius </td>
                 <td>Institutional attachment 2</td>
-                <td>my description...</td>
+                <td>Web developer </td>
                 <td>myDoc2.doc</td>
                 <td nowrap><div align=center> <a href="#"><img src="../images/tinybutton-view.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
                 <th width="2%"  scope="row">3</th>
                 <td> 05/27/2007 10:44:18 </td>
-                <td> HUNTLEY,KEISHA Y</td>
-                <td>Institutional Attachment 1</td>
-                <td>my description...</td>
+                <td> Patrick, Andrew </td>
+                <td>Institutional Attachment 3 </td>
+                <td>Programmer</td>
                 <td>myDoc3.doc</td>
                 <td nowrap><div align=center> <a href="#"><img src="../images/tinybutton-view.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
