--- a/kra-coeus-7-25/prop-budget.html
+++ b/kra-coeus-7-25/prop-budget.html
@@ -195,9 +195,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td align="right" class="tab-subhead1" scope="row"><div align="center"><a href="#" id="A7" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F7" vspace=0></a></div></td>
             <td class="tab-subhead1">budget b</td>
             <td class="tab-subhead1"><div align="center">2</div></td>
-            <td class="tab-subhead1"><div align="right">45,000</div></td>
+            <td class="tab-subhead1"><div align="right">54,000</div></td>
             <td class="tab-subhead1"><div align="right">100,000</div></td>
-            <td class="tab-subhead1"><div align="right">145,000</div></td>
+            <td class="tab-subhead1"><div align="right">154,000</div></td>
             <td class="tab-subhead1"><div align="center">
               <select onchange="dataChanged()" name="activityType">
                 <option>select</option>
@@ -231,11 +231,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <th><div align="right">Unrecovered F&amp;A:</div></th>
                     <td align="left">0.00</td>
                     <th><div align="right">Last Updated By:</div></th>
-                    <td align="left">Tom Clark</td>
+                    <td align="left">John Aloysius </td>
                   </tr>
                    <tr>
                     <th><div align="right">Comments:</div></th>
-                    <td colspan="3" align="left">Rapiebant me spectacula theatrica, plena imaginibus miseriarum mearum et fomitibus ignis mei. quis est, quod ibi homo vult dolere luctuosa et tragica, quae tamen pati ipse nollet? et tamen pati vult ex eis dolorem spectator, et dolor ipse est voluptas eius. </td>
+                    <td colspan="3" align="left">Text 2 for testing the Budget Module </td>
                   </tr>
                 </tbody>
               </table></td>
@@ -245,9 +245,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td align="right" class="tab-subhead1" scope="row"><div align="center"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F8" vspace=0></a></div></td>
             <td class="tab-subhead1">budget c</td>
             <td class="tab-subhead1"><div align="center">3</div></td>
-            <td class="tab-subhead1"><div align="right">45,000</div></td>
+            <td class="tab-subhead1"><div align="right">40,000</div></td>
             <td class="tab-subhead1"><div align="right">100,000</div></td>
-            <td class="tab-subhead1"><div align="right">145,000</div></td>
+            <td class="tab-subhead1"><div align="right">140,000</div></td>
             <td class="tab-subhead1"><div align="center">
               <select onchange="dataChanged()" name="activityType">
                 <option>select</option>
@@ -280,11 +280,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th><div align="right">Unrecovered F&amp;A:</div></th>
                   <td align="left">0.00</td>
                   <th><div align="right">Last Updated By:</div></th>
-                  <td align="left">Tom Clark</td>
+                  <td align="left">Drew Gilliam </td>
                 </tr>
                  <tr>
                     <th><div align="right">Comments:</div></th>
-                    <td colspan="3" align="left">Rapiebant me spectacula theatrica, plena imaginibus miseriarum mearum et fomitibus ignis mei. quis est, quod ibi homo vult dolere luctuosa et tragica, quae tamen pati ipse nollet? et tamen pati vult ex eis dolorem spectator, et dolor ipse est voluptas eius. </td>
+                    <td colspan="3" align="left">Text 3 for testing the Budget Module </td>
                   </tr>
               </table></td>
             </tr>
