--- a/kra-coeus-7-25/prop-specialreview.html
+++ b/kra-coeus-7-25/prop-specialreview.html
@@ -315,9 +315,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align="center">
                     <select name="specialReviewCode" onchange="dataChanged()" style="width:150px">
                       <option value="">Please Select</option>
-                      <option value="2">Animal Usage</option>
+                      <option value="2" selected>Animal Usage</option>
                       <option value="5">Biohazard Materials</option>
-                      <option value="12" selected>Foundation Relations</option>
+                      <option value="12">Foundation Relations</option>
                       <option value="1">Human Participants</option>
                       <option value="6">International Programs</option>
                       <option value="4">Radioactive Isotopes</option>
@@ -372,10 +372,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <select name="specialReviewCode" onchange="dataChanged()" style="width:150px">
                       <option value="">Please Select</option>
                       <option value="2">Animal Usage</option>
-                      <option value="5">Biohazard Materials</option>
+                      <option value="5" selected>Biohazard Materials</option>
                       <option value="12">Foundation Relations</option>
                       <option value="1">Human Participants</option>
-                      <option value="6" selected>International Programs</option>
+                      <option value="6">International Programs</option>
                       <option value="4">Radioactive Isotopes</option>
                       <option value="3">Recombinant DNA</option>
                       <option value="7">Space Change</option>
