Tom, These pages have been updated for the Changes as suggested by Lora. ~MR
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@5915 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-7-25/bud-rates.html
+++ b/kra-coeus-7-25/bud-rates.html
@@ -152,7 +152,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th align="left">Rate Type </th>
                   <th align="left">On Off Campus </th>
                   <th align="left">Fiscal Year </th>
-                  <th align="left">Effected Budget Period </th>
+                  <th align="left">Affected Budget Period </th>
                   <th align="left">Start Date </th>
                   <th align="left">Institute Rate </th>
                   <th align="left"><label for ="applicable rate">*Applicable Rate</label></th>
@@ -287,7 +287,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th align="left">Rate Type </th>
                   <th align="left">On Off Campus </th>
                   <th align="left">Fiscal Year </th>
-                  <th align="left">Effected Budget Period </th>
+                  <th align="left">Affected Budget Period </th>
                   <th align="left">Start Date </th>
                   <th align="left">Institute Rate </th>
                   <th align="left">*Applicable Rate </th>
@@ -370,7 +370,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th align="left">Rate Type </th>
                   <th align="left">On Off Campus </th>
                   <th align="left">Fiscal Year </th>
-                  <th align="left">Effected Budget Period </th>
+                  <th align="left">Affected Budget Period </th>
                   <th align="left">Start Date </th>
                   <th align="left">Institute Rate </th>
                   <th align="left">*Applicable Rate </th>
@@ -655,7 +655,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th align="left">Rate Type </th>
                   <th align="left">On Off Campus </th>
                   <th align="left">Fiscal Year </th>
-                  <th align="left">Effected Budget Period </th>
+                  <th align="left">Affected Budget Period </th>
                   <th align="left">Start Date </th>
                   <th align="left">Institute Rate </th>
                   <th align="left">*Applicable Rate </th>
@@ -723,7 +723,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th align="left">Rate Type </th>
                   <th align="left">On Off Campus </th>
                   <th align="left">Fiscal Year </th>
-                  <th align="left">Effected Budget Period </th>
+                  <th align="left">Affected Budget Period </th>
                   <th align="left">Start Date </th>
                   <th align="left">Institute Rate </th>
                   <th align="left">*Applicable Rate </th>
