updated for screenshots
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@5922 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-awards/aw-actions.html
+++ b/kra-coeus-awards/aw-actions.html
@@ -168,50 +168,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <div class="h2-container"> <span class="subhead-left">
                 <h2>View Summary</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-              <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
-                <tr>
-                  <th scope=col>&nbsp;</th>
-                  <th scope=col>&nbsp;</th>
-                  <th scope=col>&nbsp;</th>
-                  <th scope=col>&nbsp;</th>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td class="infoline">&nbsp;</td>
-                  <td class="infoline">&nbsp;</td>
-                  <td class="infoline">&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-              </table>
+			  <br><br><img src="images/aw-summary.jpg" alt="asdf" width="957" height="536">
             </div>
             <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
               <tr>
@@ -225,50 +182,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <div class="h2-container"> <span class="subhead-left">
                 <h2>View History</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-              <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
-                <tr>
-                  <th scope=col>&nbsp;</th>
-                  <th scope=col>&nbsp;</th>
-                  <th scope=col>&nbsp;</th>
-                  <th scope=col>&nbsp;</th>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td class="infoline">&nbsp;</td>
-                  <td class="infoline">&nbsp;</td>
-                  <td class="infoline">&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-                <tr>
-                  <th scope=row>&nbsp;</th>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                </tr>
-              </table>
+			<br><br><img src="images/aw-history.jpg" alt="history" width="933" height="513">  
             </div>
             <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
               <tr>
